--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-body {
-  font-family: "Times New Roman";
-  border-style: none;
-  margin: 0px;
-  outline:0px;
-  border: 0px;
-  padding: 0px; 
+@namespace url(http://www.w3.org/1999/xhtml);
+{
+    body
+    {
+        font-family: "Times New Roman" !important;
+        border-style: none !important;
+        margin: 0px !important;
+        outline:0px !important;
+        border: 0px !important;
+        padding: 0px !important;
 }
 
-body:link {
-  color: purple
+    body:link
+    {
+        color: purple !important;
+    }
 }
