--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 * {
-    font-family: "Times New Roman" !important;
-    /*
+   /* #font-family: "Times New Roman" !important;
+    
     padding: 0px !important;
     border-style: none !important;
     outline:0px !important;
     border: 0px !important;*/
-    margin: 0px !important;
+    margin: 2px !important;
 }
+* p {
+    text-align: justify !important;
+    text-justify: inter-word !important;
+  }
