removed magin mod, added hyphens

--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@
     padding: 0px !important;
     border-style: none !important;
     outline:0px !important;
-    border: 0px !important;*/
-    margin: 2px !important;
+    border: 0px !important;
+    margin: 2px !important;*/
 }
 * p {
     text-align: justify !important;
     text-justify: inter-word !important;
   }
+
+  .container {
+    display: flex  !important;
+    hyphens: auto !important;
+    -ms-hyphens: auto !important;
+    -moz-hyphens: auto !important;
+    -webkit-hyphens: auto !important;
+}
