--- a/style.css
+++ b/style.css
@@ -4,13 +4,16 @@
     padding: 0px !important;
     border-style: none !important;
    
-    border: 0px !important;
+    
     margin: 2px !important;*/
     outline:0px !important;
+    border: 0px !important;
 }
 * p {
     text-align: justify !important;
     text-justify: inter-word !important;
+    display: flex  !important;
+    hyphens: auto !important;
   }
 
   .container {
