--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 * p {
     text-align: justify !important;
     text-justify: inter-word !important;
-
+    line-height: 1.8 !important;
   }
 
   .container {
