--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 * {
-   /* #font-family: "Times New Roman" !important;
-    
+   /* #
+      padding: 5px !important;
 
     margin: 2px !important;*/
+    font-family: "Times New Roman" !important;
     border: 0px !important;
     outline:0px !important;
     border-style: none !important;
-    padding: 5px !important;
+  
    
     
 }
 * p {
     text-align: justify !important;
     text-justify: inter-word !important;
-    line-height: 1.5 !important;
+    line-height: 1.6 !important;
   }
 
   .container {
