--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     border-style: none !important;
     font-weight: 100 !important;
     hyphens: auto !important;
-    margin: 2px 2px !important;
+    margin: 2 2 !important;
     
 }
 a:link {
