Left n right border 1px

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
     margin-bottom: 1em !important;
     font-weight: 100 !important;
     hyphens: auto !important;
+    margin-left: 1px !important;
+    margin-right: 1px !important;
     
 }
 a:link {
