--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@
     margin-bottom: 1em !important;
     font-weight: 100 !important;
     hyphens: auto !important;
-    margin-left: 1px !important;
-    margin-right: 1px !important;
+    width: 98% !important; 
     
 }
 a:link {
