finalized prototype for SEP

--- a/style.css
+++ b/style.css
@@ -1,18 +1,40 @@
 * {
-   /* #
-    padding: 5px !important;
-    margin: 2px !important;
-   */
-    font-family: "Times New Roman" !important;
+   /*
     border: 0px !important;
+    */
+    font-family: "Times New Roman" !important;
+   
     outline:0px !important;
     border-style: none !important;
-    margin-top: 2em !important;
-    margin-bottom: 2em !important;
+
     font-weight: 100 !important;
-    hyphens: auto !important;
-    
+    hyphens: auto !important;  
 }
+
+div#article {
+    margin: 0 !important;
+}
+#article-content, #style_guide_content, #style_guide_content_wide{
+  margin:-16px !important;
+}
+
+
+#article-content h3{
+    margin-bottom: -0.3em !important;
+    margin-top: 1.85em !important;
+}
+
+#article-content h2 {
+    margin-bottom: -0.3em !important;
+    margin-top: 1.6em !important;
+}
+
+#article li, #content li {
+    margin-bottom: 1.3em !important;
+    margin-top: 1.35em !important;
+}
+
+
 a:link {
     color: indigo;
   }
@@ -21,6 +43,8 @@ a:link {
     text-align: justify !important;
     text-justify: inter-word !important;
     line-height: 1.7 !important;
+    margin-top: 1.5em !important;
+    margin-bottom: 1em !important;
   }
 
   .container {
