--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ a:link {
 }
 }
 
+a:link {
+  color: indigo !important;
+}
+
 * h1,h2,h3 {
   color: bisque !important;
 }
@@ -95,6 +99,10 @@ a:link {
 }
 
 * {
+  /*
+  
   background-color: black !important;
   background-image: url('https://htmlcolors.com/color-image/000000.png') !important;
+
+  */
 }
