--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@
 
     font-weight: 100 !important;
     hyphens: auto !important; 
+  /*
     background-color: black !important;
-
+*/
 }
 
 div#article {
